example/errors/test.box
set a: int = 9223372036854775808; // ok!

